--- a/index.html
+++ b/index.html
@@ -1,9 +1,27 @@
+<!DOCTYPE html>
 <html>
-<head>
-   <title> IDESWEB </title>
-</head>
-
-<body>
-   <h1> IDESWEB </h1>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Mi página de prueba</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/styles.css" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="scripts/snowstorm.js"></script>
+  </head>
+  <body>
+    <h1> Bio Life </h1>
+    <img src="images/euro-leaf.jpg" alt="Mi imagen de prueba ">
+    <p> La próxima vez que encuentres un producto con la etiqueta Bio, recuerda que se trata de productos que: </p>
+      <ul>
+        <li> Llevan a cabo un proceso natural de selección de especies  </li>
+        <li> Contribuyen al cuidado de la biodiversidad </li>
+        <li> Tienen más aportes nutricionales  </li>
+      </ul>
+      
+      <p> Los productos Bio, del mismo modo que los ecológicos u orgánicos, comparten la singularidad de no haber sido elaborados de forma artificial ni haber empleado químicos, pesticidas o fertilizantes durante cualquiera de sus etapas. </p>
+       <img src="images/a.jpg" alt="berries" id="swap"> 
+      <p> La clave está en su etiquetado. Aquí puedes ver todos los <a href="https://blog.oxfamintermon.org/como-saber-si-los-productos-que-consumes-son-ecologicos/" title="Enlace a la página. Abre ventana nueva" target="_blank" >sellos </a> que certifican si lo que adquieres es de procedencia ecológica, entre los que destaca el EU Organic Bio Logo o la “eurohoja”
+        <button>Escribe aquí tu nombre</button>
+       <script src="scripts/script.js"></script>
+      </body>
 </html>
+
